gitops/system/base/cert-manager-scaleway-webhook/ciliumnetworkpolicy-apiserver.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: scaleway-certmanager-webhook-apiserver
  namespace: cert-manager
spec:
  endpointSelector:
    matchLabels:
      app: scaleway-certmanager-webhook
  egress:
    - toEntities:
        - kube-apiserver
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
            - port: "6443"
              protocol: TCP
    - toCIDRSet:
        - cidr: "10.32.0.1/32"
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
